Initial port to 1.17 and server optimizations, compiler error now